Most tests can now be executed and run
there still no support for other data types but that's easy to add